# mcp-noun-project

./: .gitignore  README.md  dev.py  download_test.py  install.py  libraries  main.py  openapi.json  pyproject.toml  setup.py  test.py
src/mcp_noun_project/: __init__.py  __main__.py  client.py  server.py
